<resources>
    <string name="app_name">M7.HomeWork1.1</string>
    <string name="quiz">Quiz</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="category">Category</string>
    <string name="start">Start</string>
    <string name="difficulty">Difficulty</string>
    <string name="skipBtn">skip</string>
    <string name="finishBtn">finish</string>

    <string-array name="categories_list">
        <item>All</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="difficult_list">
        <item>All</item>
        <item>Easy</item>
        <item>Middle</item>
        <item>Hard</item>
    </string-array>
</resources>


