<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/tvMain"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnOne"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="+"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->

    <!--    <Button-->
    <!--        android:id="@+id/btnTwo"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="-"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/btnOne"/>-->

    <TextView
        android:id="@+id/tvQuiz"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop32"
        android:paddingStart="@dimen/paddingStart24"
        android:text="@string/quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ar_tut"
        android:layout_marginTop="@dimen/marginTopImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuiz" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_amount"
        style="@style/RegularText"
        android:padding="2sp"
        android:layout_marginTop="@dimen/marginTop39"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintRight_toLeftOf="@id/tvNum"/>

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:paddingStart="5sp"
        style="@style/RegularNumber"
        android:layout_marginTop="@dimen/marginTop39"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:layout_marginTop="@dimen/marginTop17"
        android:progressTint="@color/colorPrimary"
        android:thumb="@drawable/seek_bar"
        app:layout_constraintTop_toBottomOf="@id/tvNum"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        style="@style/RegularText"
        android:padding="2sp"
        android:layout_marginTop="@dimen/marginTop23"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="@id/tvAmount"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/spCategory"
        style="@style/Spinner"
        android:layout_marginTop="5sp"
        android:background="@drawable/spinner"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        style="@style/RegularText"
        android:padding="2sp"
        android:layout_marginTop="@dimen/marginTop23"
        app:layout_constraintTop_toBottomOf="@id/spCategory"
        app:layout_constraintStart_toStartOf="@id/tvAmount"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/spDifficulty"
        style="@style/Spinner"
        android:layout_marginTop="5sp"
        android:background="@drawable/spinner"
        app:layout_constraintTop_toBottomOf="@id/tvDifficulty"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <Button
        android:id="@+id/btnStart"
        style="@style/btnStart"
        android:text="@string/start"
        android:layout_marginTop="@dimen/marginTop64"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/spDifficulty"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>